--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,11 @@
 html,
 body,
 #root,
-.app,
+.app {
+  height: max-content;
+  width: 100%;
+  font-family: "Source Sans Pro", sans-serif;
+}
 .content {
   height: 100%;
   width: 100%;
@@ -15,21 +19,17 @@ body,
   position: relative;
 }
 
+/* Scrollbar */
 ::-webkit-scrollbar {
   width: 10px;
 }
-
-/* Track */
 ::-webkit-scrollbar-track {
   background: #e0e0e0;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
   background: #888;
 }
-
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
